--- a/meta/main.yml
+++ b/meta/main.yml
@@ -2,7 +2,7 @@
 galaxy_info:
   author: Luis Gracia
   description: Install and configure NTP
-  license: CC-BY-SA 4.0
+  license: MIT
   min_ansible_version: 2.0
   platforms:
     - name: EL
